--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     // "allowImportingTsExtensions": true,
 
     // Recommended Options
-    "strict": true,
+   // "strict": true,
     //"jsx": "react-jsx",
    // "verbatimModuleSyntax": true,
    // "isolatedModules": true,
