--- a/Tsalapok/package.json
+++ b/Tsalapok/package.json
@@ -2,7 +2,7 @@
   "name": "13c_2csop",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec tsx ./src/app.ts",
@@ -12,8 +12,8 @@
   "author": "",
   "license": "ISC",
   "description": "",
-
   "devDependencies": {
+    "@types/node": "^24.4.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
