--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "description": "",
   "dependencies": {
     "@types/cors": "^2.8.19",
+    "@types/mysql": "^2.15.27",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "mysql2": "^3.15.3",
     "nodemon": "^3.1.10",
     "tslint": "^5.20.1",
     "typescript": "^5.9.2"
