--- a/package.json
+++ b/package.json
@@ -43,9 +43,13 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.5.2",
+    "bcryptjs": "^3.0.3",
     "cypress": "^15.6.0",
+    "multer": "^2.0.2",
     "ts-node": "^10.9.2",
-    "tsx": "^4.20.5"
+    "tsx": "^4.20.5",
+    "util": "^0.12.5"
   }
 }
